specs/miningpoolhub-exporter/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: miningpoolhub-exporter 

spec:
  selector:
    app: miningpoolhub-exporter
  ports:
    - name: http
      port: 9401
